# StableDiffusionOnDevice

./: LICENSE.md  README.md  README_EN.md  RELEASE.md  gradle.properties  local.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/stable_diffusion/: .gitattributes  README.md
app/src/main/cpp/: CMakeLists.txt  opencv.sh
app/src/main/cpp/boost/: LICENSE.md  boost.sh
app/src/main/cpp/boost/arm64-v8a/include/boost-1_82/boost/asio/detail/: config.hpp
app/src/main/cpp/boost/arm64-v8a/include/boost-1_82/boost/config/: user.hpp
app/src/main/cpp/boost/arm64-v8a/lib/cmake/boost_headers-1.82.0/: boost_headers-config.cmake
app/src/main/cpp/boost/arm64-v8a/lib/cmake/boost_regex-1.82.0/: boost_regex-config.cmake  libboost_regex-variant-clang-mt-a64-1_82-static.cmake
app/src/main/cpp/include/: QnnSampleApp.hpp  QnnTypeMacros.hpp  SampleApp.hpp  diffusion_solver.h  prompt_solver.h
app/src/main/cpp/include/models/: DecoderModel.h  TextEncoderModel.h  UNet.h
app/src/main/cpp/include/onnx/: ONNXModel.h
app/src/main/cpp/include/qcom/: QCOMModel.h  time_all.h
app/src/main/cpp/include/qnnUtils_8550/Utils/: BuildId.hpp  IOTensor.cpp  IOTensor.hpp
app/src/main/cpp/include/qnnUtils_8650/Utils/: BuildId.hpp  DataUtil.hpp  IOTensor.cpp  QnnSampleAppUtils.hpp
app/src/main/cpp/include/scheduler/: scheduler_base.h  scheduler_dpmpp_2m.h  scheduler_dpmpp_2m_karras.h  scheduler_euler_a.h
app/src/main/cpp/include/utils/: utils.h  utils_base.h  utils_file.h  utils_image.h  utils_tokenizer.h  utils_vec.h
app/src/main/cpp/qnn_8550/include/QNN/: QnnCommon.h  QnnGraph.h  QnnInterface.h  QnnOpDef.h  QnnProfile.h  QnnProperty.h  QnnSdkBuildId.h  QnnTypes.h
app/src/main/cpp/qnn_8550/include/QNN/CPU/: QnnCpuOpPackage.h
app/src/main/cpp/qnn_8550/include/QNN/HTP/: QnnHtpCommon.h  QnnHtpDevice.h
app/src/main/cpp/qnn_8550/include/QNN/HTP/core/: build_options.h  builtin_intrinsics.h  executable.h  float16.h  forward_classes.h  graph_status.h  macros_attribute.h  match_op.h  oexpr.h  oexpr_post.h  op_package_feature_support.h  op_package_name.h  op_register.h  opname_tag.h  ops_opts_registration_defs.h  perf_timing.h  simple_op.h  string_registry2.h
app/src/main/cpp/qnn_8550/include/QNN/HTPQEMU/: QnnHtpQemuCommon.h
app/src/main/cpp/qnn_8650/include/QNN/: QnnBackend.h  QnnContext.h  QnnInterface.h  QnnSdkBuildId.h  QnnTensor.h
app/src/main/cpp/qnn_8650/include/QNN/HTP/: QnnHtpCommon.h  QnnHtpGraph.h  QnnHtpMem.h
app/src/main/cpp/qnn_8650/include/QNN/HTP/core/: afuncs.h  allocator.h  crate.h  deserializer.h  flags.h  log.h  op.h  op_def.h  op_info.h  op_register_ext.h  op_registry.h  op_utils.h  ops_opts_registration.h  optimize.h  optimize_defs.h  optimize_flags.h  serializer.h  shape.h  tensor.h  tile_extract.h  weak_linkage.h
app/src/main/cpp/qnn_8650/include/QNN/TFLiteDelegate/: QnnTFLiteDelegate.h
app/src/main/cpp/src/: QnnSampleApp.cpp  diffusion_solver.cpp  makeup_jni.cpp  prompt_solver.cpp
app/src/main/cpp/src/models/: DecoderModel.cpp  TextEncoderModel.cpp  UNet.cpp
app/src/main/cpp/src/onnx/: ONNXModel.cpp
app/src/main/cpp/src/qcom/: QCOMModel.cpp  time_all.cpp
app/src/main/cpp/src/scheduler/: scheduler_dpmpp_2m.cpp  scheduler_dpmpp_2m_karras.cpp  scheduler_euler_a.cpp
app/src/main/cpp/src/utils/: utils_file.cpp  utils_image.cpp  utils_vec.cpp
app/src/main/java/com/xiaomi/stablediffusion/: StableDiffusion.java  Text2GraphActivity.java
app/src/main/res/drawable/: custom_button.xml  thumb.xml  track.xml
app/src/main/res/layout/: activity_text2_graph.xml  processbar.xml
app/src/main/res/values/: colors.xml  strings.xml  style.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
